--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -133,7 +133,10 @@ block content
                             tr
                                 td 1
                                 td -
-                                td -
+                                td
+                                    a(href="https://calc.yumacom.ru/content/cms/files/33470.png?w=400&h=400&mode=crop&scale=both" class="js-fancybox").color-box
+                                        img(src="https://calc.yumacom.ru/content/cms/files/33470.png?w=20&h=20&mode=crop&scale=both", alt="")
+                                        span Color
                                 td -
                                 td -
                                 td -
