--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -319,6 +319,7 @@ block content
                               angle-top-right-radius="80"
                               angle-bottom-left-radius="200"
                               angle-bottom-right-slice="300,200"
+                              rounding="bottom"
                           )
         +b.FOOTER.footer
             .container-fluid
