--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -530,6 +530,26 @@ section,
  }
 }
 
+.js-toggle-collection {
+ cursor: pointer;
+ text-decoration: underline;
+ &:after {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  width: 0;
+  height: 0;
+  border-color: #000 #0000 #0000;
+  border-style: solid;
+  border-width: 5px 4px 0;
+  margin-left: 5px;
+ }
+ &:hover {
+  text-decoration: none;
+  color: $primary-color;
+ }
+}
+
 .choose-color {
  background: #fff;
  padding: 30px;
